--- a/README.org
+++ b/README.org
@@ -46,6 +46,12 @@ its content.
 
 ** Marzo 2023
 
+*** 16-Mar-23
++ [[https://nekoka-project.github.io/pubs/given.pdf][Verified given clause procedures]]. ~ Jasmin Blanchette, Qi Qiu & Sophie Tourret. #ITP #IsabelleHOL
++ [[https://cacm.acm.org/blogs/blog-cacm/270970-gpt-4s-successes-and-gpt-4s-failures/fulltext][GPT-4's successes, and GPT-4's failures]]. ~ Gary Marcus. #AI #GPT4 #ChatGPT
++ [[https://www.elconfidencial.com/tecnologia/2023-03-16/chatgpt-nuevo-trabajo-pagado_3592612/][ChatGPT ya ha creado un nuevo trabajo muy bien pagado, pero tiene los días contados]]. ~ Michael Mcloughlin. #IA #ChatGPT
++ [[https://www.lavanguardia.com/ciencia/20230316/8827092/inteligencia-artificial-ver-humana.html][ChatGPT no tiene nada que ver con la inteligencia humana]]. ~ Ramón López de Mántaras. #IA #ChatGPT
+
 *** 15-Mar-23
 + [[https://arxiv.org/abs/2303.04488][Magnushammer: A transformer-based approach to premise selection]]. ~ Maciej Mikuła, Szymon Antoniak, Szymon Tworkowski, Albert Qiaochu Jiang, Jin Peng Zhou, Christian Szegedy, Łukasz Kuciński, Piotr Miłoś, Yuhuai Wu. #MachineLearning #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2303.07735][Can neural networks do arithmetic? A survey on the elementary numerical skills of state-of-the-art deep learning models]]. ~ Alberto Testolin. #AI #NeuralNetwork #Math
