--- a/README.org
+++ b/README.org
@@ -46,6 +46,12 @@ its content.
 
 ** Marzo 2023
 
+*** 23-Mar-23
++ [[https://lawrencecpaulson.github.io//2023/03/22/Binomial_Coeffs.html][Small examples involving binomial coefficients]]. ~ Lawrence C. Paulson (@LawrPaulson). #ITP #IsabelleHOL #Math
++ [[https://epicandmonicisnotiso.blogspot.com/2023/03/an-apologia-of-lazy-evaluation.html][An apologia for lazy evaluation]]. ~ Ruben Astudillo. #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2006.01613][Classical set theory: Theory of sets and classes]]. ~ Taras Banakh. #SetTheory #Math
++ [[https://arxiv.org/abs/2303.09325][Can generative Pre-trained Transformers (GPT) pass assessments in Higher Education programming courses? ~ Jaromir Savelka, Arav Agarwal, Christopher Bogart, Yifan Song, Majd Sakr]]. #GPT #Education #Programming
+
 *** 22-Mar-23
 + [[https://djvelleman.github.io/HTPIwL/][How to prove it with Lean]]. ~ Daniel J. Velleman. #eBook #ITP #LeanProver
 + [[https://hal.science/hal-04031193/document][Certified logic-based explainable AI (The case of monotonic classifiers)]]. ~ Aurélie Hurault & Joao Marques-Silva. #ITP #Coq #XAI
